# Test

./: .gitignore  README.md  aero_eyes_colab (1).ipynb  pyproject.toml  requirements.txt
aero_eyes/: __init__.py  config.py  evaluate.py  types.py
aero_eyes.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
aero_eyes/models/: __init__.py  features.py  proposals.py  segmentation.py  trackers.py
aero_eyes/stages/: __init__.py  run_all.py  stage1.py  stage2.py  stage3.py  stage4.py  stage5.py
aero_eyes/utils/: __init__.py  geometry.py  io.py  video.py  viz.py
configs/: config.yaml
docs/: CLAUDE_CODE_PROMPT.md  COLAB_KAGGLE_GUIDE.md  HUONG_DAN_SU_DUNG.md  jetson_deployment_notes.md
notebooks/: aero_eyes_colab.ipynb  train_stage2a_land_kaggle.ipynb  train_stage2a_land_yolo11s_kaggle.ipynb
scripts/: check_gt_similarity.py  check_stage2_recall.py  export_matching_examples.py  make_synthetic_fixture.py  run_slurm.slurm  sweep_zscore_loocv.py
tests/: test_st_iou.py  test_stages.py
