[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aero_eyes"
version = "0.1.0"
description = "Few-shot spatio-temporal drone object localization"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["aero_eyes*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
